# CMakeTest

Step1/: CMakeLists.txt  tutorial.cxx
Step2/: CMakeLists.txt  tutorial.cxx
Step3/MathFunctions/: CMakeLists.txt
Step4/: CMakeLists.txt
Step4/MathFunctions/: CMakeLists.txt
install/lib/: MathFunctions.lib
